name:                priority-map
version:             0.1.0.0
synopsis:            The priority map data structure is a map combined with a heap
-- description:         
license:             BSD3
author:              Ben Sherman
maintainer:          benmsherman@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.PriorityMap.Heap, Data.PriorityMap.DynArray, Data.PriorityMap, Data.PriorityMap.STMap
  build-depends:       base >=4.5 && <4.8,
                       containers >=0.4.2 && <0.6,
                       array >=0.4 && <0.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
